// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Token> Anchor story renders snapshot 1`] = `
<a
  class="rbt-token"
  href="#"
>
  <div
    class="rbt-token-label"
  >
    This is a link token
  </div>
</a>
`;

exports[`<Token> Disabled story renders snapshot 1`] = `
<div
  class="rbt-token rbt-token-disabled"
>
  <div
    class="rbt-token-label"
  >
    This is a disabled token
  </div>
</div>
`;

exports[`<Token> Interactive story renders snapshot 1`] = `
<div
  class="rbt-token rbt-token-removeable"
  tabindex="0"
>
  <div
    class="rbt-token-label"
  >
    This is an interactive token
  </div>
  <button
    aria-label="Remove"
    class="close btn-close rbt-close rbt-token-remove-button"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
      class="rbt-close-content"
    >
      ×
    </span>
    <span
      class="sr-only visually-hidden"
    >
      Remove
    </span>
  </button>
</div>
`;

exports[`<Token> Static story renders snapshot 1`] = `
<div
  class="rbt-token"
>
  <div
    class="rbt-token-label"
  >
    This is a static token
  </div>
</div>
`;
